--- a/src/views/eachCountry.ejs
+++ b/src/views/eachCountry.ejs
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coutry app</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/public/css/style.css" type="text/css" >
 </head>
 <body>
     <header>
@@ -13,12 +12,12 @@
         <div class="header__search">Search</div>
     </header>
 
-    <div class="wrapper">
+    <div class="wrapper handle">
         <div class="countries">
             <h1><%- countryData[0]["name"] %></h1>
             <img src="<%- countryData[0].flags.svg %>" alt="">
         </div>
     </div>
-    <!-- <script src="../../public/js/script.js"></script> -->
+    <script src="./js/script.js" text/javascript></script>
 </body>
 </html>
