--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -7,23 +7,37 @@
     <link rel="icon" type="image.svg" sizes="32x32" href="../design/walk-outline.svg">
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <title>WHERE IN THE WORLD</title>
-    <link rel="stylesheet" href="/public/css/index.css">
+    <link rel="stylesheet" href="/public/css/index.css" type="text/css">
 </head>
 <body>
 	<div class="container_parent">
 		<h1>LET'S SEARCH COUNTRY</h1>
-		<form>
-			<input type="text" class="user_input">
-		</form>
-		<div class="country_List">
+		<div class="user_input_container">
+			<form>
+				<input type="text" class="user_input" placeholder="type country name">
+			</form>
+			<select name="country" id="country-select">
+				<option>--Please choose an option--</option>
+				<option value="Africa">Africa</option>
+				<option value="America">America</option>
+				<option value="Asia">Asia</option>
+				<option value="Europe">Europe</option>
+				<option value="Oceania">Oceania</option>
+			</select>
+		</div>
+
+		<div id="country_List" class="country_List">
 			<% for(let i = 0; i < countryList.length; i++ ){ %>
-				<a href="/country/<%- countryList[i].name %>" class="country_card">
-					<h2 class="country-name"><%- countryList[i].name %></h2>
-					<img src="<%- countryList[i].flags.svg %>" width="100px" height="auto">
-				</a>
+				<div class="country_card <%- countryList[i].region %>">
+					<a href="/country/<%- countryList[i].name %>">
+						<h2 class="country-name"><%- countryList[i].name %></h2>
+						<img src="<%- countryList[i].flags.svg %>" width="200px" height="auto">
+					</a>
+				</div>
 			<% } %>        
 		</div>
 	</div>
+	<script src="/public/js/script.js"></script>
 </body>
 
 </html>
