--- a/src/views/eachCountry.ejs
+++ b/src/views/eachCountry.ejs
@@ -4,20 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coutry app</title>
-    <link rel="stylesheet" href="/public/css/style.css" type="text/css" >
+    <link rel="stylesheet" href="/public/css/style.css" type="text/css">
+    <base href="/">
+    <style>
+        body{
+            padding: 50px;
+            background-image: url('<%- countryData[0].flags.svg %>');
+            background-size: cover;
+            background-color:rgba(255,255,255,0.8);
+            background-blend-mode:lighten;
+        }
+        .content_main {
+            text-align: center;
+        }
+        img {
+            width: 500px;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="header__logo">Node JS</div>
-        <div class="header__search">Search</div>
-    </header>
-
-    <div class="wrapper handle">
-        <div class="countries">
-            <h1><%- countryData[0]["name"] %></h1>
-            <img src="<%- countryData[0].flags.svg %>" alt="">
+    <a href="/countries">BACK TO COUNTRIE</a>
+    <div class="content_main">
+        <h1><%- countryData[0]["name"] %></h1>
+        <img src="<%- countryData[0].flags.svg %>" width="500px">
+        <div class="country_info">
+            <h3>CAPITAL : <%- countryData[0].capital %></h3>
+            <h3>LANGUAGE : <%- countryData[0].languages[0].name %></h3>
+            <h3>CURRENCIES : <%- countryData[0].currencies[0].code %> / <%- countryData[0].currencies[0].symbol %></h3>
+            <h3>POPURATION : <%- countryData[0].population %></h3>
+            <h3>TIMEZONE : <%- countryData[0].timezones %></h3>
         </div>
     </div>
-    <script src="./js/script.js" text/javascript></script>
+
+
+    <script src="/public/js/script.js" type='text/javascript'></script>
 </body>
 </html>
