--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -14,7 +14,7 @@
 		<h1>LET'S SEARCH COUNTRY</h1>
 		<div class="user_input_container">
 			<form>
-				<input type="text" class="user_input" placeholder="type country name">
+				<input id="user_input" type="text" class="user_input" placeholder="type country name">
 			</form>
 			<select name="country" id="country-select">
 				<option>--Please choose an option--</option>
