--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="/public/css/index.css" type="text/css">
 </head>
 <body>
+	<a href="/">BACK TO HOME</a>
 	<div class="container_parent">
 		<h1>LET'S SEARCH COUNTRY</h1>
 		<div class="user_input_container">
+		
 			<form>
 				<input id="user_input" type="text" class="user_input" placeholder="type country name">
 			</form>
